fix: An issue with resizing the monaco editor
- The resize observer would continue sending updates even though the size hadn't changed.
- Now we manually debounce the updates by comparing the new width and height against the previous.
- Additionally it seems that the monaco editor now contains elements that are sized larger than its container, so we have to hide overflowing content to prevent additional scrollbars

--- a/src/aux-server/aux-web/shared/vue-components/MonacoTagEditor/MonacoTagEditor.css
+++ b/src/aux-server/aux-web/shared/vue-components/MonacoTagEditor/MonacoTagEditor.css
@@ -11,6 +11,7 @@
 
     /* Height is 100% the container minus the height of the breadcrumbs container */
     height: calc(100% - 23px);
+    overflow: hidden;
 }
 
 .editor-breadcrumbs {
